ADD: PlantUser Swagger Documentation
